--- a/index.html
+++ b/index.html
@@ -159,6 +159,16 @@
               <p>Hours Of Support</p>-->
             </div>
           </div>
+          <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
+            <div class="count-box">
+              <a href="https://www.scimagojr.com/journalsearch.php?q=21101051831&amp;tip=sid&amp;exact=no" title="SCImago Journal &amp; Country Rank"><img border="0" src="https://www.scimagojr.com/journal_img.php?id=21101051831" alt="SCImago Journal &amp; Country Rank"  /></a>
+            <!--   <i class="icofont-live-support"></i>
+             <span data-toggle="counter-up">1,463</span>
+              <p>Hours Of Support</p>-->
+            </div>
+          </div>
+
+
 
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
